; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/extr_serverstask.c_servers_stop.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/extr_serverstask.c_servers_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@servers_data = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@SERVERS_CYCLE_TIME_MS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @servers_stop() #0 {
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @servers_data, i32 0, i32 0), align 4
  br label %1

1:                                                ; preds = %4, %0
  %2 = load i32, i32* @SERVERS_CYCLE_TIME_MS, align 4
  %3 = call i32 @mp_hal_delay_ms(i32 %2)
  br label %4

4:                                                ; preds = %1
  %5 = call i64 (...) @servers_are_enabled()
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %1, label %7

7:                                                ; preds = %4
  %8 = load i32, i32* @SERVERS_CYCLE_TIME_MS, align 4
  %9 = mul nsw i32 %8, 3
  %10 = call i32 @mp_hal_delay_ms(i32 %9)
  ret void
}

declare dso_local i32 @mp_hal_delay_ms(i32) #1

declare dso_local i64 @servers_are_enabled(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
